# ChessClone

./: .gitignore  .gitmodules  CMakeLists.txt  ChessClone.sln  README.md  premake5.lua
ChessClone/: ChessClone.vcxproj  ChessClone.vcxproj.filters
ChessClone/Source/: Board.cpp  Board.h  ChessCore.h  Main.cpp  Piece.cpp  Piece.h  Rook.cpp  Rook.h
ChessClone/res/shaders/: Basic.shader
ChessClone/src/: Application.cpp  Application.h  Bishop.cpp  Bishop.h  Board.h  ChessCore.cpp  ChessCore.h  King.cpp  King.h  Knight.cpp  Knight.h  Main.cpp  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Renderer.cpp  Renderer.h  RendererData.cpp  RendererData.h  Rook.cpp  Rook.h
Depedencies/GLEW/: CMakeLists.txt
Depedencies/GLEW/src/: glewinfo.c
